tools/flowc/tests/errors/error10.flow
import string;

// Test on detection of global variable re-declaration 

x = 4;

fun() -> int {
	x = 5;
	x + 1
}
